# Wordle

./: .gitignore  build.gradle.kts  settings.gradle.kts
features/core/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
features/core/src/main/cpp/: native-lib.cpp
features/core/src/main/java/com/khammin/core/alias/: LambdaTypes.kt
features/core/src/main/java/com/khammin/core/data/di/: DataStoreModule.kt  LanguageRepositoryModule.kt  ThemeRepositoryModule.kt
features/core/src/main/java/com/khammin/core/data/extentions/: DataStore.kt
features/core/src/main/java/com/khammin/core/data/ndk/: KeyManager.kt
features/core/src/main/java/com/khammin/core/data/repository/: LanguageRepositoryImpl.kt  ThemeRepositoryImpl.kt
features/core/src/main/java/com/khammin/core/data/serializer/: GameProgressSerializer.kt  LanguageSerializer.kt  ThemeSerializer.kt
features/core/src/main/java/com/khammin/core/domain/model/: GameProgress.kt  GameRoom.kt  LanguageModel.kt  (+3 more)
features/core/src/main/java/com/khammin/core/mvi/: BaseMviViewModel.kt  NetworkError.kt  UiGlobalEffect.kt
features/core/src/main/java/com/khammin/core/util/: AdManager.kt  LocaleHelper.kt  NetworkUtils.kt  Resource.kt  WordleText.kt
features/core/src/main/java/com/wordle/core/alias/: LambdaTypes.kt
features/core/src/main/java/com/wordle/core/mvi/: BaseMviViewModel.kt  NetworkError.kt  UiGlobalEffect.kt  UiText.kt
features/core/src/main/java/com/wordle/core/util/: LocaleHelper.kt  Resource.kt
features/core/src/main/res/values/: strings.xml
features/core/src/main/res/values-ar/: strings.xml
(+459 files in other folders)
